# toposphere

./: .gitignore  README.md  check_all.sh  manage.py  pyproject.toml
accounts/: apps.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
accounts/migrations/: 0001_initial.py
notes/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
notes/migrations/: 0001_initial.py
personal_space/: asgi.py  settings.py  urls.py  wsgi.py
test/: test_scenarios.py
test/scenarios/: test_todos.py  test_user_journey.py
test/scripts/: test_login.sh  test_register.sh
tmp/: phase1_spec.md
todos/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
todos/migrations/: 0001_initial.py
toposphere/: asgi.py  settings.py  urls.py  wsgi.py
